[package]
name = "brain"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opencv = "0.84"
tesseract = "0.10"
itertools = "0.10"
futures-util = "0.3"
