[package]
name = "brain"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.4"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# LOCKING TO KNOWN STABLE VERSIONS
opencv = "0.84.5"
tesseract = "0.9.0" 
itertools = "0.10"
futures-util = "0.3"
lazy_static = "1.4.0" # Added this because my prod code uses it
